--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,8 @@
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
+}
+
 figure.left-align {
     display: inline-block;
     margin: 1rem;
